tests/src/frontend/syntax/invalid/invalid_pattern2.sk

fun test(): void {
   x match { 2+3 -> 0 }
}
